--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
+#pip3 install torch==1.11.0+cu102 torchvision==0.12.0+cu102 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cu102
+
+
+matplotlib
+numpy
+pandas
+tqdm
+PyYAML
+boto3
 mlflow
+
+-e .    # To install setup.py to recognise src folder as package
